# Maydays

./: Jenkinsfile  README.md
maydays/: .gitignore  Jenkinsfile  docusaurus.config.js  package-lock.json  package.json
maydays/docs/: intro.md
maydays/script/: deploy.sh
maydays/src/pages/: index.js
md-p-00_meeting-cost-calculator/: README.md  package-lock.json  package.json
md-p-00_meeting-cost-calculator/data/: employees.csv
md-p-01_rs-post-generator/: README.md  agents.py  pyproject.toml  tasks.py
md-p-01_rs-post-generator/maydays/: docusaurus.config.js  package-lock.json  package.json
md-p-01_rs-post-generator/maydays/docs/maydays-projects/: _category_.json  maydays-00.md
md-p-01_rs-post-generator/maydays/src/pages/: index.js
md-p-01_rs-post-generator/setup/: Llama2Modelfile
md-p-01_rs-post-generator/tools/: search_tools.py
md-p-01_rs_post_generator/: main.py
md-p-02_old-game-reborn/: main.py
md-p-02_old_game_reborn/: README.md
md-p-03_jenkins_pipeline/: README.md
md-p-04_automatic_subtitle_removal/: README.md  remove_subtitle.ipynb  requirements.txt
md-p-05_infra_supervision/: README.md  docker-compose.yml
md-p-06_rag-ai-for-pdf/: README.md  populate_database.py  query_data.py
md-p-07_radio-to-text/: README.md  main.py  recorder.py  voice_to_text.py
md-p-08_wireframe_and_design/: README.md
md-p-09_interview-training-bot/: .gitignore  README.md  main.py
md-p-10_bend_discovery/: README.md
md-p-11_Crew-AI-and-RAG/: .gitignore
md-p-11_Crew-AI-and-RAG/AIssistant/: .env  README.md  pyproject.toml
md-p-11_Crew-AI-and-RAG/AIssistant/aissistant/: main.py  note_engine.py  prompts.py
md-p-11_Crew-AI-and-RAG/AIssistant/aissistant/data/: Airplane_Crashes_and_Fatalities_Since_1908.csv  note.txt
md-p-11_Crew-AI-and-RAG/AIssistant/aissistant/utils/: utils.py
md-p-12_K8s-gpt_Discovery/: REAMDE.md  deployment.yaml
(+56 files in other folders)
