[tool.poetry]
name = "rs-post-generator"
version = "0.1.0"
description = "A simple rs post generator to display May Day's projects with a simple command"
authors = ["Phenixjj <58008493+Phenixjj@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python=">=3.10.0,<3.12"
crewai="^0.1.24"
unstructured="0.10.25"
pyowm="3.3.0"
tools="^0.1.9"
python-dotenv="1.0.0"
openai = "^1.13.3"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"