[tool.poetry]
name = "aissistant"
version = "0.1.0"
description = ""
authors = ["Phenixjj <58008493+Phenixjj@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = "^0.30.11"
python-dotenv = "^1.0.1"
tools = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
